# socket

./: CMakeLists.txt  LICENSE
mac/: CMakeLists.txt
mac/src/: main.c
rpcserver/: CMakeLists.txt  CMakeLists_bak.txt  calculator.thrift
rpcserver/bak/: Calculator.cpp  rpc_server.cpp
rpcserver/inc/: calculator_types.h
rpcserver/inc_bak/: Calculator.h
rpcserver/src/client/: CMakeLists.txt  rpc_client.cpp
rpcserver/src/common/: Calculator.cpp  calculator_types.cpp
rpcserver/src/server/: CMakeLists.txt  rpc_server.cpp
